--- a/style.css
+++ b/style.css
@@ -219,6 +219,8 @@ th {
     width:242.2px;
     height:172px;
     margin: 0 auto;
+    border-bottom: 1px;
+    border-color: #1f1f1f;
 }
 
 #countdown {
