--- a/style_arm.css
+++ b/style_arm.css
@@ -216,12 +216,11 @@ th {
 }
 
 .styletab {
-    background: linear-gradient(transparent, 60%,#1f1f1f);
-    width:242.2px;
+    /*background: linear-gradient(transparent, 60%,#1f1f1f);
+    width:242.2px;*/
     height:172px;
     margin: 0 auto;
-    border-bottom: 1px;
-    border-color: #1f1f1f;
+
 }
 
 #countdown {
