--- a/style_arm.css
+++ b/style_arm.css
@@ -50,9 +50,9 @@
 
 @font-face {
     font-family: 'Aida_Italic'; /* Название шрифта, которое вы будете использовать */
-    src: url('fonts/shk-aida-ita.woff') format('woff'), /* Современные браузеры */
+    src: url('fonts/shk-aida-ita.woff') format('woff'),
+    url('fonts/shk-aida-ita.ttf') format('ttf'), /* Современные браузеры */
         url('fonts/AnyConv.com__shk-aida-ita.woff2') format('woff2');
-    font-weight: medium; /* Насыщенность шрифта */
     font-style: italic; /* Стиль шрифта (обычный, курсив и т.д.) */
 }
 
