--- a/style_arm.css
+++ b/style_arm.css
@@ -333,3 +333,17 @@ th {
 #map {
     color: #1f1f1f;
 }
+
+.invitation {
+    display: flex;
+    margin: 0 auto;
+    max-width: 340px;
+}
+
+#eventshead {
+    text-align: left;
+    font-family: Brygada1918;
+    font-size: 42px;
+    font-style: italic;
+    font-weight: normal;
+}
